--- a/UnitLogin.fmx
+++ b/UnitLogin.fmx
@@ -1217,17 +1217,19 @@ object Form1: TForm1
           Stroke.Kind = None
           XRadius = 25.000000000000000000
           YRadius = 25.000000000000000000
-          object Edit1: TEdit
+          object edt_login_email: TEdit
             Touch.InteractiveGestures = [LongTap, DoubleTap]
             Align = Client
+            StyleLookup = 'editstyle'
             TabOrder = 0
-            Margins.Left = 10.000000000000000000
+            Margins.Left = 15.000000000000000000
             Margins.Top = 5.000000000000000000
-            Margins.Right = 10.000000000000000000
+            Margins.Right = 15.000000000000000000
             Margins.Bottom = 5.000000000000000000
-            Size.Width = 197.000000000000000000
+            Size.Width = 187.000000000000000000
             Size.Height = 32.000000000000000000
             Size.PlatformDefault = False
+            TextPrompt = 'Usu'#225'rio'
           end
         end
       end
