--- a/UnitFrameCategoria.fmx
+++ b/UnitFrameCategoria.fmx
@@ -1,17 +1,18 @@
 object FrameCategoria: TFrameCategoria
-  Size.Width = 153.000000000000000000
-  Size.Height = 145.000000000000000000
+  Size.Width = 161.000000000000000000
+  Size.Height = 152.000000000000000000
   Size.PlatformDefault = False
   object rect_cat: TRectangle
     Align = Center
     Fill.Color = xFFF1F5F4
+    Margins.Bottom = 20.000000000000000000
     Size.Width = 80.000000000000000000
     Size.Height = 80.000000000000000000
     Size.PlatformDefault = False
     Stroke.Kind = None
     XRadius = 14.000000000000000000
     YRadius = 14.000000000000000000
-    object Image1: TImage
+    object img_cat: TImage
       MultiResBitmap.Height = 128
       MultiResBitmap.Width = 128
       MultiResBitmap = <
@@ -183,21 +184,22 @@ object FrameCategoria: TFrameCategoria
             73DE22FA1B80CE2433EE3E19D07D5670558353D7B780F807831E08391E807177
             5C422FC9585792AF6B9949EF01921A77A7489122458A1429528C4B00FE1FE98F
             365EFCA4FBA20000000049454E44AE426082}
-          FileName = 
-            'C:\Users\Jo'#227'o Mito.PESADON\Documents\Inform'#225'tica\Projetos\App-ag' +
-            'endamentos\Imagens\cat-medico.png'
+          FileName = 'D:\99Coders\Lancamento 11\CPL\CPL1\Fontes\Imagens\cat-medico.png'
         end>
-      Align = Client
-      Size.Width = 80.000000000000000000
-      Size.Height = 80.000000000000000000
+      Align = Center
+      Size.Width = 60.000000000000000000
+      Size.Height = 60.000000000000000000
       Size.PlatformDefault = False
     end
     object lbl_cat: TLabel
       StyledSettings = [Family, Style]
-      Position.X = -24.000000000000000000
-      Position.Y = 87.000000000000000000
+      Position.X = -13.000000000000000000
+      Position.Y = 78.000000000000000000
+      Size.Width = 105.000000000000000000
+      Size.Height = 20.000000000000000000
+      Size.PlatformDefault = False
       TextSettings.Font.Size = 14.000000000000000000
-      TextSettings.FontColor = xFFA0A0A0
+      TextSettings.FontColor = xFF717F7F
       TextSettings.HorzAlign = Center
       Text = 'M'#233'dico'
       TabOrder = 1
