--- a/Servidor/UnitPrincipal.fmx
+++ b/Servidor/UnitPrincipal.fmx
@@ -36,17 +36,18 @@ object FrmPrincipal: TFrmPrincipal
     RequestTimeout = -1
     ServicePort = 8082
     ProxyOptions.Port = 8888
-    AuthenticationOptions.AuthorizationOption = rdwAOBasic
-    AuthenticationOptions.OptionParams.AuthDialog = True
-    AuthenticationOptions.OptionParams.CustomDialogAuthMessage = 'Protected Space...'
-    AuthenticationOptions.OptionParams.Custom404TitleMessage = '(404) The address you are looking for does not exist'
-    AuthenticationOptions.OptionParams.Custom404BodyMessage = '404'
-    AuthenticationOptions.OptionParams.Custom404FooterMessage = 'Take me back to <a href="./">Home REST Dataware'
-    AuthenticationOptions.OptionParams.Username = 'testserver'
-    AuthenticationOptions.OptionParams.Password = 'testserver'
+    TokenOptions.Active = False
+    TokenOptions.GetTokenName = 'GetToken'
+    TokenOptions.ServerRequest = 'RESTDWServer01'
+    TokenOptions.TokenHash = 'RDWTS_HASH'
+    TokenOptions.LifeCycle = 30
+    ServerParams.HasAuthentication = True
+    ServerParams.UserName = 'testserver'
+    ServerParams.Password = 'testserver'
     SSLMethod = sslvSSLv2
     SSLVersions = []
     Encoding = esUtf8
+    ServerContext = 'restdataware'
     RootPath = '/'
     SSLVerifyMode = []
     SSLVerifyDepth = 0
