--- a/Mobile/UnitAgenda.fmx
+++ b/Mobile/UnitAgenda.fmx
@@ -1,9 +1,9 @@
 object FrmAgenda: TFrmAgenda
   Left = 0
   Top = 0
-  Caption = 'Form1'
+  Caption = 'Agendei'
   ClientHeight = 549
-  ClientWidth = 366
+  ClientWidth = 370
   Fill.Kind = Solid
   Position = MainFormCenter
   FormFactor.Width = 320
@@ -11,17 +11,18 @@ object FrmAgenda: TFrmAgenda
   FormFactor.Devices = [Desktop]
   OnCreate = FormCreate
   OnDestroy = FormDestroy
+  OnShow = FormShow
   DesignerMasterStyle = 0
   object Layout3: TLayout
     Align = Top
-    Size.Width = 366.000000000000000000
+    Size.Width = 370.000000000000000000
     Size.Height = 57.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 1
     object Label1: TLabel
       Align = Contents
       StyledSettings = [Family]
-      Size.Width = 366.000000000000000000
+      Size.Width = 370.000000000000000000
       Size.Height = 57.000000000000000000
       Size.PlatformDefault = False
       TextSettings.Font.Size = 18.000000000000000000
@@ -41,38 +42,38 @@ object FrmAgenda: TFrmAgenda
           PNG = {
             89504E470D0A1A0A0000000D4948445200000040000000400806000000AA6971
             DE000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-            03F549444154785EED994168146714C7DFFB7666B7118B0DA5BD78520A158456
-            50526236C418324910ECA11634D9F4505AF12045B0C7427BE9A9A75228F6546A
-            76A3B6502C4835BBA16A36BBB98420285EC443112A926A6BD2AABB9999D7F76D
-            5EAD4B367177B395FDD6EF7799F7FEF3CD4EE63FB3DFFEBF09582C168BC562B1
-            582C16CBF308CAB6E1BC7BEDFB686C61D37122DC0E442753F181B4EC6A2AFE17
-            030EE4F36DD170F147A57050F7BE0FA1EB62CF5867FF74694013A164DB30DE9F
-            3EFB622C5C38FFEFC56B1C0714059490B6A968A801C3D973ED45DA30894AF588
-            F41F082F49D55434CC80446EE25544F71244A0432423688801EFE5273703E214
-            2A7C43246358B701C3D9CCD62285592E5F5F56CC625D061CCA5DD846144C3908
-            5B44328EBA0D48642FBCA9504D451CB5592423A9CB80C4CCC45B1051173944BC
-            2292B1D46CC0C84C660F5030C965FBB262363519303C3331844BC1CF1C6D368A
-            643C551B9098CEBCA396F02C38AA4DA496A0AAB5C0682E3D4A08DF721959566A
-            87806610D409DE46797114E553BB7C7217905C22E01F1270785884CFE320A122
-            DD23F7440A354FFCADBC8F9028E422E05B18F082ABC87B1FB1FC1009EEF367CC
-            133973E35D7DBFCA21ABF2540346F3E923E4FB5F73A07FEAD86683C2F032011E
-            1B8F0F5C1169056B5E542297FE98477C21AD91F8E03F7250ED4F760E66442A63
-            55034672139FF183F7A9B446E3FBFEDD58D0F6DA77BDBD7F8AF4988A9360229F
-            3EDA2A17AF711CE7653F5A1C96B68C8A0604001F48D932F00DDD296519150DE0
-            A99E27DAE7838A06F0C4F08D94AD03C2AC54655434606CB777827F4B3F91D678
-            F8719E2FB8382E6D19150DD0A43ABDCF39A01C93D658021F1E70683AF8C3AEFE
-            FB2295B1AA019A5497F725BBF7A17EAB2B925184041917838E64D7C02F22ADA0
-            AA7437924B1F42F44F96DEEFD6093B9857445F214760CEB151BD0D4B7138D49F
-            E97262D3DB5224D6D19823B2BE3911EE91832F275C9EC839F3EA92351ECE2199
-            30E0E37D4055E4BAC0F5031EB61842381F929A3B1DF77ED3E75E8BAA0CD08C4E
-            67DE0E159DE1036222D506C19964977750BAA661CDAFC0938CC5FB7FE2676ABF
-            FE4E89D412546D8046FF7B4BA9609003F68248C65393019A547C288B0AFAD884
-            7B22194DCD0668C6E2DE2C4F5D7B789571472463A9CB00CDF86EEF6AE03ADD3C
-            B9DD12C948EA364073AAD3BB1142A49B806E8A641CEB3240537AEDB414F29340
-            D745328A751BA049F50CDD0E62D11E4E3B73221943430CD09CDAD5FB7BE105DC
-            AB139F4846D03003347AC1A13690C726ACC8DE3C4FFC216553D1500334C91D03
-            7FBB05771F97E79695128122C56B89E6A3EAB540AD1C9E9D75FF2ADCFB88172D
-            DB154172AD1599C562B1582C168BC562B1589E2900FF00489238AF9E7DA8F400
+            03F549444154785EED994F681C551CC77FBF37FB266D50B448BDF4A4080A0515
+            2C95345BD258324910EA418536D97810150F22053D0A7AF1D49308524F62B39B
+            5A05A950B4D90DFEC96637971004C58B78104191D46A53ADDD9D9DF7F3F7363F
+            DB2ED9A4BBC92AFBB6EF7399DFEF3B6F7632DF997DF37D1BF0783C1E8FC7E3F1
+            783C9E5B11946DC779FADB0FC3BED53B5E21C2BD40742A971ECDCBAEAEE23F31
+            E0A9727967682E7FAC148ED93E8EC184210E4D0F8C2CD40774114AB61DE3D985
+            B3B7F799D5CFFEBD788BD6A028A18CB45D45470D98289EDB55A5FE39546A48A4
+            EB20DC295557D1310332A5D9BB11F59710C07E919CA023063C539EDB0388F3A8
+            F041919C61DB064C140BF756C914B9BC7F4D718B6D1970AC74FE0132C97C0AE1
+            1E919C63CB06648AE71F52A8E603ADF688E4245B3220B338FB2804EA0B0E11BB
+            457296B60D985C2C1C02AACD71B96B4D719BB60C98589C1DC76AF229479BDB44
+            729E960DC82C149E54553C0B5AED14A92768692D3055CA4F11C27B5C066B4AFB
+            10D022823AC9DB901747219F5AF3C935206922E01709A47858C0E74921A122DB
+            23F7440A2D37FCADBC8F90C87091F02D4C78C155E5BD5759FE1B092EF167AC10
+            A59667060FFF28876CC84D0D982AE75FA4387E8703FD4DC7761B64CC5704787C
+            263DFAB548EBD8F4A232A5FCAB3CE284B44E12437C556370243B305610A9810D
+            0D982CCDBEC10FDEEBD23A4D5C8B7FDB91F4DFF7FEF0F01F225DA3E9249829E7
+            5FEA958BB7E894BEAB165627A46DA0A90109C07352F60C7C431F91B281A606F0
+            54CF13EDAD41530378627857CADE016149AA069A1A307D203AC9EFD2D7A4751E
+            7E9C572A1A67A46DA0A90196DC40F4260794E3D23A4B12C3150E4D473FDA3772
+            49A4063634C0921B8CDE62F79EB7BFEA8AE41486A0A055B23F3B38FAB948EB68
+            29DD4D96F2C710E353F6852252DBB0836545F4367204E61C1BDAADA9C761633F
+            537362B3DB7A24B6D19823B2BD3901F7C8C197132E4FE49C796DC91A0FE7904C
+            98F0F1354055E5BAC2F5151E76D9805931A4963F48473FDB736F464B0658A616
+            0A4F184567F8803E91DA83E04C76303A2A5DD7B0E957E046A6D3239FF03375C4
+            7EA744EA095A36C062FFBDA582648C03F6AA48CED39601965C7ABC88011C6613
+            2E8AE4346D1B60994E474B46C321A8D57E15C959B6648065E640F44DA2530779
+            72FB492427D9B20196D303D1F706828304F48348CEB12D032CF59F9D62C34F02
+            7D2792536CDB004B6E68FC97A42F1CE2B4B32C923374C400CBE97DC3172A3BF0
+            319BF84472828E1960B10B0ED54F119BB02E7BF33CF1BB945D45470DB0641F1E
+            FD4B57F4E35C9E5B53EA248A14AF25BA8F96D702EDF2C2D292FEB372F1655EB4
+            EC5504D9CD56641E8FC7E3F1783C1E8FC7E3F95F01F807869038B03629A13F00
             00000049454E44AE426082}
           FileName = 'D:\99Coders\Lancamento 11\CPL\CPL1\Fontes\Imagens\back.png'
         end>
@@ -82,12 +83,13 @@ object FrmAgenda: TFrmAgenda
       Size.Width = 40.000000000000000000
       Size.Height = 56.000000000000000000
       Size.PlatformDefault = False
+      OnClick = img_exp_voltarClick
     end
     object Line2: TLine
       Align = Bottom
       LineType = Diagonal
       Position.Y = 56.000000000000000000
-      Size.Width = 366.000000000000000000
+      Size.Width = 370.000000000000000000
       Size.Height = 1.000000000000000000
       Size.PlatformDefault = False
       Stroke.Color = xFFF2F2F2
@@ -96,7 +98,7 @@ object FrmAgenda: TFrmAgenda
   object layout_calendario: TLayout
     Align = Top
     Position.Y = 94.000000000000000000
-    Size.Width = 366.000000000000000000
+    Size.Width = 370.000000000000000000
     Size.Height = 215.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 3
@@ -106,12 +108,12 @@ object FrmAgenda: TFrmAgenda
     LineType = Diagonal
     Margins.Top = 10.000000000000000000
     Position.Y = 319.000000000000000000
-    Size.Width = 366.000000000000000000
+    Size.Width = 370.000000000000000000
     Size.Height = 1.000000000000000000
     Size.PlatformDefault = False
     Stroke.Color = xFFF2F2F2
   end
-  object lbl_servico: TLabel
+  object label11: TLabel
     Align = Top
     StyledSettings = [Family]
     Margins.Left = 10.000000000000000000
@@ -119,7 +121,7 @@ object FrmAgenda: TFrmAgenda
     Margins.Right = 10.000000000000000000
     Position.X = 10.000000000000000000
     Position.Y = 330.000000000000000000
-    Size.Width = 346.000000000000000000
+    Size.Width = 350.000000000000000000
     Size.Height = 26.000000000000000000
     Size.PlatformDefault = False
     TextSettings.Font.Size = 16.000000000000000000
@@ -131,7 +133,7 @@ object FrmAgenda: TFrmAgenda
   object lb_horario: TListBox
     Align = Top
     Position.Y = 356.000000000000000000
-    Size.Width = 366.000000000000000000
+    Size.Width = 370.000000000000000000
     Size.Height = 55.000000000000000000
     Size.PlatformDefault = False
     StyleLookup = 'transparentlistboxstyle'
@@ -142,20 +144,36 @@ object FrmAgenda: TFrmAgenda
     DefaultItemStyles.GroupHeaderStyle = ''
     DefaultItemStyles.GroupFooterStyle = ''
     ListStyle = Horizontal
-    Viewport.Width = 366.000000000000000000
+    Viewport.Width = 370.000000000000000000
     Viewport.Height = 55.000000000000000000
+    object lbl_nao_horario: TLabel
+      Align = Client
+      StyledSettings = [Family, Style]
+      Margins.Left = 50.000000000000000000
+      Margins.Top = 5.000000000000000000
+      Margins.Right = 50.000000000000000000
+      Margins.Bottom = 5.000000000000000000
+      Size.Width = 270.000000000000000000
+      Size.Height = 45.000000000000000000
+      Size.PlatformDefault = False
+      TextSettings.Font.Size = 14.000000000000000000
+      TextSettings.FontColor = xFFF37F7F
+      TextSettings.HorzAlign = Center
+      Text = 'Nenhum hor'#225'rio dispon'#237'vel nessa data'
+      TabOrder = 0
+    end
   end
   object Line3: TLine
     Align = Top
     LineType = Diagonal
     Margins.Top = 10.000000000000000000
     Position.Y = 421.000000000000000000
-    Size.Width = 366.000000000000000000
+    Size.Width = 370.000000000000000000
     Size.Height = 1.000000000000000000
     Size.PlatformDefault = False
     Stroke.Color = xFFF2F2F2
   end
-  object Label2: TLabel
+  object lbl_servico: TLabel
     Align = Top
     StyledSettings = [Family]
     Margins.Left = 10.000000000000000000
@@ -163,7 +181,7 @@ object FrmAgenda: TFrmAgenda
     Margins.Right = 10.000000000000000000
     Position.X = 10.000000000000000000
     Position.Y = 432.000000000000000000
-    Size.Width = 346.000000000000000000
+    Size.Width = 350.000000000000000000
     Size.Height = 26.000000000000000000
     Size.PlatformDefault = False
     TextSettings.Font.Size = 16.000000000000000000
@@ -178,7 +196,7 @@ object FrmAgenda: TFrmAgenda
     Margins.Right = 10.000000000000000000
     Position.X = 10.000000000000000000
     Position.Y = 458.000000000000000000
-    Size.Width = 346.000000000000000000
+    Size.Width = 350.000000000000000000
     Size.Height = 25.000000000000000000
     Size.PlatformDefault = False
     TextSettings.Font.Size = 14.000000000000000000
@@ -191,7 +209,7 @@ object FrmAgenda: TFrmAgenda
     LineType = Diagonal
     Margins.Top = 10.000000000000000000
     Position.Y = 493.000000000000000000
-    Size.Width = 366.000000000000000000
+    Size.Width = 370.000000000000000000
     Size.Height = 1.000000000000000000
     Size.PlatformDefault = False
     Stroke.Color = xFFF2F2F2
@@ -204,7 +222,7 @@ object FrmAgenda: TFrmAgenda
     Margins.Bottom = 10.000000000000000000
     Position.X = 10.000000000000000000
     Position.Y = 489.000000000000000000
-    Size.Width = 346.000000000000000000
+    Size.Width = 350.000000000000000000
     Size.Height = 50.000000000000000000
     Size.PlatformDefault = False
     Stroke.Kind = None
@@ -215,7 +233,7 @@ object FrmAgenda: TFrmAgenda
       Align = Client
       StyledSettings = [Family]
       Locked = True
-      Size.Width = 346.000000000000000000
+      Size.Width = 350.000000000000000000
       Size.Height = 50.000000000000000000
       Size.PlatformDefault = False
       TextSettings.Font.Size = 18.000000000000000000
@@ -229,14 +247,14 @@ object FrmAgenda: TFrmAgenda
   object Layout1: TLayout
     Align = Top
     Position.Y = 57.000000000000000000
-    Size.Width = 366.000000000000000000
+    Size.Width = 370.000000000000000000
     Size.Height = 37.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 10
     object lbl_mes: TLabel
       Align = Client
       StyledSettings = [Family]
-      Size.Width = 246.000000000000000000
+      Size.Width = 250.000000000000000000
       Size.Height = 37.000000000000000000
       Size.PlatformDefault = False
       TextSettings.Font.Size = 16.000000000000000000
@@ -293,7 +311,7 @@ object FrmAgenda: TFrmAgenda
       Align = Right
       Opacity = 0.600000023841857900
       Margins.Right = 10.000000000000000000
-      Position.X = 306.000000000000000000
+      Position.X = 310.000000000000000000
       Size.Width = 50.000000000000000000
       Size.Height = 37.000000000000000000
       Size.PlatformDefault = False
