--- a/Servidor/UnitPrincipal.fmx
+++ b/Servidor/UnitPrincipal.fmx
@@ -30,7 +30,7 @@ object FrmPrincipal: TFrmPrincipal
     Size.Width = 364.000000000000000000
     Size.Height = 200.000000000000000000
     Size.PlatformDefault = False
-    TabIndex = 0
+    TabIndex = 1
     TabOrder = 3
     TabPosition = PlatformDefault
     Sizes = (
@@ -42,7 +42,7 @@ object FrmPrincipal: TFrmPrincipal
       CustomIcon = <
         item
         end>
-      IsSelected = True
+      IsSelected = False
       Size.Width = 66.000000000000000000
       Size.Height = 26.000000000000000000
       Size.PlatformDefault = False
@@ -106,7 +106,7 @@ object FrmPrincipal: TFrmPrincipal
       CustomIcon = <
         item
         end>
-      IsSelected = False
+      IsSelected = True
       Size.Width = 72.000000000000000000
       Size.Height = 26.000000000000000000
       Size.PlatformDefault = False
@@ -185,18 +185,17 @@ object FrmPrincipal: TFrmPrincipal
     RequestTimeout = -1
     ServicePort = 8082
     ProxyOptions.Port = 8888
-    TokenOptions.Active = False
-    TokenOptions.GetTokenName = 'GetToken'
-    TokenOptions.ServerRequest = 'RESTDWServer01'
-    TokenOptions.TokenHash = 'RDWTS_HASH'
-    TokenOptions.LifeCycle = 30
-    ServerParams.HasAuthentication = True
-    ServerParams.UserName = 'testserver'
-    ServerParams.Password = 'testserver'
+    AuthenticationOptions.AuthorizationOption = rdwAOBasic
+    AuthenticationOptions.OptionParams.AuthDialog = True
+    AuthenticationOptions.OptionParams.CustomDialogAuthMessage = 'Protected Space...'
+    AuthenticationOptions.OptionParams.Custom404TitleMessage = '(404) The address you are looking for does not exist'
+    AuthenticationOptions.OptionParams.Custom404BodyMessage = '404'
+    AuthenticationOptions.OptionParams.Custom404FooterMessage = 'Take me back to <a href="./">Home REST Dataware'
+    AuthenticationOptions.OptionParams.Username = 'testserver'
+    AuthenticationOptions.OptionParams.Password = 'testserver'
     SSLMethod = sslvSSLv2
     SSLVersions = []
     Encoding = esUtf8
-    ServerContext = 'restdataware'
     RootPath = '/'
     SSLVerifyMode = []
     SSLVerifyDepth = 0
